html almost ready

--- a/views/pro/dashboard.hbs
+++ b/views/pro/dashboard.hbs
@@ -1,2 +1,7 @@
-<div class="contacts-bought">My contacts</div>
-<div class=""><a href="/pro/search"></a><button>Find new contacts</button></div>
+<div class="contacts-bought">
+    <h1>My contacts</h1>
+      {{> contacts-filter}}
+</div>
+<div class="find-new-clients">
+    <a href="/pro/search"><button>Find new contacts</button></a>
+</div>
