--- a/views/pro/recherche.hbs
+++ b/views/pro/recherche.hbs
@@ -1,9 +1,6 @@
 <h1>Find your future clients</h1>
 <div class="filter-zone">
-   <input type="checkbox" class="filter-item"><label for="">Zone</label>
-   <input type="checkbox" class="filter-item"><label for="">Objective</label>
-   <input type="checkbox" class="filter-item"><label for="">Budget</label>
-   
+   {{> contacts-filter}}
 </div>
 <div class="results">
     {{!-- {{#each filteredInvestors}} --}}
