--- a/views/invest/blog.hbs
+++ b/views/invest/blog.hbs
@@ -12,4 +12,5 @@
 
 <div>
     <p>Restez informé sur ce qui ce passez chez Keeyz en vous inscrivant à notre newsletter</p>
+    <label for="email">Email</label><input type="email" name="email">
 </div>
