--- a/views/partials/contacts-filter.hbs
+++ b/views/partials/contacts-filter.hbs
@@ -1,4 +1,4 @@
-<input type="checkbox" class="filter-item"><label for="">Zone</label>
+<input type="datalist" class="filter-item"><label for="">Zone</label>
 <input type="checkbox" class="filter-item"><label for="">Objective</label>
 <input type="checkbox" class="filter-item"><label for="">Budget</label>
 <input type="checkbox" name="" id="" class="filter-item">
