--- a/views/pro/index-pro.hbs
+++ b/views/pro/index-pro.hbs
@@ -1,4 +1,4 @@
-<div class="promise">
+<div class="promise-pro">
     <h1>Win yourself some time</h1>
     <h4>Our high-profile young investors are waiting for you to get into action</h4>
     <button>Get in touch with them</button>
