--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -1,4 +1,6 @@
+{{!-- Gérer le nom si l'investisseur est loggé ou non --}}
 <h1 class="title">Hello {{user.name}}!</h1>
+
 
 <form id="fill-my-form" method="post" action="/my-form" class="form">
 
@@ -16,28 +18,29 @@
     <label for="nbr_child">How many children do you have?</label>
     <input class="input" id="nbr_child" name="nbr_child" type="number" required>
 
-    <label for="total_revenu">What's your monthly revenu?</label>
-    <input class="input" id="total_revenu" name="total_revenu" type="number" required>
+    <label for="total_revenue">What's your monthly revenue?</label>
+    <input class="input" id="total_revenue" name="total_revenue" type="number" required>
 
     <label for="monthly_savings">What's your monthly saving capacity?</label>
     <input class="input" id="monthly_savings" name="monthly_savings" type="number" required>
 
-    <label for="annual_revenu_taxes">What's your annual revenu taxes?</label>
-    <input class="input" id="annual_revenu_taxes" name="annual_revenu_taxes" type="number" required>
+    <label for="annual_revenue_taxes">What's your annual revenue taxes?</label>
+    <input class="input" id="annual_revenue_taxes" name="annual_revenue_taxes" type="number" required>
 
-    <label for="objectives">What's your main objectives?</label>
+    <label for="objectives">What are your main objective(s)?</label>
     <datalist id="objectives">
         <option value="" selected>
         <option disabled value="──────────">
         <option value="Example1">
         <option value="Example2">
     </datalist>
-    <label for="areas">What's your main objectives?</label>
+    <label for="areas">Where do you want to invest?</label>
     <datalist id="areas">
         <option value="" selected>
         <option disabled value="──────────">
         <option value="A une heure de Paris">
-        <option value="A deux heures en">
+        <option value="A deux heures en train">
+        <option value="Anywhere ! As long as money's raining"></option>
     </datalist>
     {{!-- Adding property here  --}}
     <button class="btn">Submit my form</button>
