--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -32,11 +32,15 @@
         <option value="Example1">
         <option value="Example2">
     </datalist>
+
+    <label for="construction_works">Are you open to do some work construction?</label>
+    <input type="checkbox" id="construction_works" name="construction_works">
+
     <label for="areas">What's your main objectives?</label>
     <datalist id="areas">
         <option value="" selected>
         <option disabled value="──────────">
-        <option value="A une heure de Paris">
+        <option value="One hour from Paris">
         <option value="A deux heures en">
     </datalist>
     {{!-- Adding property here  --}}
