Routes auth split & creation

--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -3,9 +3,9 @@
         <h1 class="form-title">Start your Keeyz journey</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
-    {{!-- {{#if msg}}
-  <p class="message {{msg.status}}">{{msg.text}}</p>
-  {{/if}} --}}
+    {{#if msg}}
+    <p class="message {{msg.status}}">{{msg.text}}</p>
+    {{/if}}
     <form method="post" action="/signup" id="form_user">
         <div class="form-item-wrapper flexed-item">
             <label for="firstname" class="label-ref label">Name</label>
