dashboard pro WIP

--- a/views/pro/dashboard.hbs
+++ b/views/pro/dashboard.hbs
@@ -1,7 +1,8 @@
-<div class="contacts-bought">
-    <h1>My contacts</h1>
-      {{> contacts-filter}}
-</div>
 <div class="find-new-clients">
     <a href="/pro/search"><button>Find new contacts</button></a>
+</div>
+<div class="contacts-bought">
+    <h1>My contacts</h1>
+    {{> pro-filters}}
+    {{> pro-filtered-contacts}}
 </div>
