--- a/views/pro/recherche.hbs
+++ b/views/pro/recherche.hbs
@@ -1,25 +1,8 @@
 <h1>Find your future clients</h1>
 <div class="filter-zone">
-   {{> contacts-filter}}
+    {{> pro-filters}}
+     
 </div>
 <div class="results">
-    {{!-- {{#each filteredInvestors}} --}}
-    <div class="result-investor">
-        <div class="header-res-invest"><img src="" alt="flouted-img">
-        <button><img src="" alt="cart"></button></div>
-
-    </div>
-    <div>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-        <span>Rep1</span>
-    </div>
-    {{!-- {{/each}} --}}
+    {{>pro-filtered-contacts}}
 </div>
