--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -9,13 +9,13 @@
     <form method="post" action="/signup" id="form_user">
         <div class="form-item-wrapper flexed-item">
             <label for="firstname" class="label-ref label">Name</label>
-            <input id="firstname" type="text" name="name" class="input-text input" placeholder="Albert" required
-                value="yo">
+            <input id="firstname" type="text" name="firstname" class="input-text input" placeholder="Albert" required
+                value="Amine">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="lastname" class="label-ref label">Last Name</label>
             <input id="lastname" type="text" name="lastname" class="input-text input" placeholder="Biceps" required
-                value="gui">
+                value="Lahrichi">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="email" class="label-ref label">Email</label>
