--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
             </div>
             <div>
                 <a href="/blog">Blog</a>
-                <a href="/blog">About</a>
+                <a href="/about">About</a>
                 <a href="/signin">Signin</a>
             </div>
         </nav>
