login pro & classic user

--- a/views/auth/investor/signin.hbs
+++ b/views/auth/investor/signin.hbs
@@ -1,6 +1,6 @@
 <section class="sign form-container">
     <header class="form-header">
-        <h1 class="form-title">Welcome Back !</h1>
+        <h1 class="form-title">Welcome Back User!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     {{#if msg}}
