--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -1,6 +1,6 @@
 <section class="sign form-container">
     <header class="form-header">
-        <h1 class="form-title">Start your Keeyz journey</h1>
+        <h1 class="form-title">Signup up User!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     {{#if msg}}
