--- a/views/auth/pro/signin.hbs
+++ b/views/auth/pro/signin.hbs
@@ -1,12 +1,12 @@
 <section class="sign form-container">
     <header class="form-header">
-        <h1 class="form-title">Welcome Back !</h1>
+        <h1 class="form-title">Welcome back pro!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     {{#if msg}}
     <p class="message {{msg.status}}">{{msg.text}}</p>
     {{/if}}
-    <form method="post" action="/signin" id="form_user">
+    <form method="post" action="/pro/signin" id="form_user">
         <div class="form-item-wrapper">
             <label for="email" class="label-ref label">Email</label>
             <input id="email" type="email" class="input-text input" name="email" placeholder="albert.biceps@gmail.com"
@@ -20,5 +20,5 @@
         <button class="button-primary white">Log in !</button>
     </form>
 
-    <p class="form-sub-infos">Don't have an account yet ? <a href="/signup" class="button-link-form">Sign Up</a></p>
+    <p class="form-sub-infos">Don't have an account yet ? <a href="/pro/signup" class="button-link-form">Sign Up</a></p>
 </section>
