--- a/views/auth/pro/signup.hbs
+++ b/views/auth/pro/signup.hbs
@@ -1,21 +1,30 @@
 <section class="sign form-container">
     <header class="form-header">
-        <h1 class="form-title">Start your Keeyz journey</h1>
+        <h1 class="form-title">Start your journey Pro!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     {{#if msg}}
     <p class="message {{msg.status}}">{{msg.text}}</p>
     {{/if}}
-    <form method="post" action="/signup" id="form_user">
+    <form method="post" action="/pro/signup" id="form_user">
         <div class="form-item-wrapper flexed-item">
             <label for="firstname" class="label-ref label">Name</label>
             <input id="firstname" type="text" name="name" class="input-text input" placeholder="Albert" required
-                value="yo">
+                value="Pierre">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="lastname" class="label-ref label">Last Name</label>
             <input id="lastname" type="text" name="lastname" class="input-text input" placeholder="Biceps" required
-                value="gui">
+                value="Dupont">
+        </div>
+        <div class="form-item-wrapper flexed-item">
+            <label for="company" class="label-ref label">Company Name</label>
+            <input id="company" type="text" name="company" class="input-text input" placeholder="Biceps" value="Nexity">
+        </div>
+        <div class="form-item-wrapper flexed-item">
+            <label for="siret" class="label-ref label">N° siret</label>
+            <input id="siret" type="number" name="siret" class="input-text input" placeholder="Biceps"
+                value="36252187900034">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="email" class="label-ref label">Email</label>
@@ -29,5 +38,5 @@
         </div>
         <button class="button-primary white">Create Account</button>
     </form>
-    <p class="form-sub-infos">Already have an account ? <a href="/signin" class="button-link-form">Sign In</a></p>
+    <p class="form-sub-infos">Already have an account ? <a href="/pro/signin" class="button-link-form">Sign In</a></p>
 </section>
