--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -8,12 +8,12 @@
   <div>{{this.total_revenue}}</div>
 </td>
 <td class="table-division">
-  <div>${{this.areas}}</div>
+  <div>{{this.areas}}</div>
 </td>
  <td class="table-division">
   <div>{{this.construction_works}}</div>
 </td>
  <td class="table-division">
-  <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down" data-id-sneaker="{{this._id}}"  ></a></div>
+  <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down" ></a></div>
 </td>
 
