--- a/views/pro/recherche.hbs
+++ b/views/pro/recherche.hbs
@@ -1,8 +1,8 @@
 <h1>Find your future clients</h1>
 <div class="filter-zone">
-    {{> pro-filters}}
+    {{> pro_filters}}
      
 </div>
 <div class="results">
-    {{>pro-filtered-contacts}}
+    {{>pro_filtered_contacts}}
 </div>
