--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    
+    {{!-- {{#compare tpl "pro" operator="==="}}
+        {{/compare}} --}}
     {{{body}}}
 
     <footer>
