nav_bar display

--- a/views/auth/pro/signin.hbs
+++ b/views/auth/pro/signin.hbs
@@ -1,3 +1,4 @@
+{{<nav_bar_pro}}
 <section class="sign form-container">
     <header class="form-header">
         <h1 class="form-title">Welcome back pro!</h1>
