--- a/views/auth/investor/signin.hbs
+++ b/views/auth/investor/signin.hbs
@@ -1,3 +1,4 @@
+{{<nav_bar_investor}}
 <section class="sign form-container">
     <header class="form-header">
         <h1 class="form-title">Welcome Back User!</h1>
