changement nav for pro and regular users

--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -1,5 +1,5 @@
 <section class="sign form-container">
-    {{<nav_bar_investor}}
+    {{>nav_bar_investor}}
     <header class="form-header">
         <h1 class="form-title">Signup up User!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
