--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -1,5 +1,5 @@
 {{!-- Gérer le nom si l'investisseur est loggé ou non --}}
-{{< nav_bar_investor}}
+{{> nav_bar_investor}}
 <h1 class="title">Hello {{user.name}}!</h1>
 
 
