--- a/views/pro/index-pro.hbs
+++ b/views/pro/index-pro.hbs
@@ -1,4 +1,4 @@
-{{< nav_bar_pro}}
+{{> nav_bar_pro}}
 <div class="promise-pro">
     <h1>Win yourself some time</h1>
     <h4>Our high-profile young investors are waiting for you to get into action</h4>
