--- a/views/auth/pro/signup.hbs
+++ b/views/auth/pro/signup.hbs
@@ -1,4 +1,4 @@
-{{<nav_bar_pro}}
+{{>nav_bar_pro}}
 <section class="sign form-container">
     <header class="form-header">
         <h1 class="form-title">Start your journey Pro!</h1>
