--- a/views/pro/dashboard.hbs
+++ b/views/pro/dashboard.hbs
@@ -1,4 +1,4 @@
-{{< nav_bar_pro}}
+{{> nav_bar_pro}}
 <div class="find-new-clients">
     <a href="/pro/search"><button>Find new contacts</button></a>
 </div>
