Nav bar logged out ok

--- a/views/partials/nav_bar_login_pro.hbs
+++ b/views/partials/nav_bar_login_pro.hbs
@@ -4,9 +4,8 @@
             <a href="/"><img src="" alt="logo"></a>
         </div>
         <div>
-            <a href="/blog">Blog</a>
-            <a href="/about">About</a>
             <a href="/">Investor</a>
+            <a href="/pro/contact">Contact us</a>
             <a href="/logout">Log out</a>
         </div>
     </nav>
