filter on each okkkkk

--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -1,16 +1,16 @@
 
     <div id="list1" class="dropdown-check-list" tabindex="100">
-        <span class="anchor">Select objectives</span>
-        <ul id="items" class="items">
-            <li><input type="checkbox" />Decrease my taxes </li>
-            <li><input type="checkbox" />Optimize my savings</li>
+        <div class="anchor">Select objectives</div>
+        <ul class="items" class="items">
+            <li><input type="checkbox" />Decrease taxes </li>
+            <li><input type="checkbox" />Optimize savings</li>
             <li><input type="checkbox" />Prepare the future </li>
-            <li><input type="checkbox" />Increase my incomes </li>
+            <li><input type="checkbox" />Increase incomes </li>
         </ul>
     </div>
     <div id="list2" class="dropdown-check-list" tabindex="100">
-        <span class="anchor">Select areas</span>
-        <ul id="items" class="items">
+        <div class="anchor">Select areas</div>
+        <ul class="items" class="items">
             <li><input type="checkbox" />Parisian surroundings</li>
             <li><input type="checkbox" />Up to 2 hours away from Paris</li>
             <li><input type="checkbox" />Up to 4 hours away form Paris</li>
@@ -18,15 +18,15 @@
         </ul>
     </div>
     <div id="list3" class="dropdown-check-list" tabindex="100">
-        <span class="anchor">Select timeframe</span>
-        <ul id="items" class="items">
+        <div class="anchor">Select timeframe</div>
+        <ul class="items" class="items">
             <li><input type="checkbox" />Now </li>
             <li><input type="checkbox" />In the next few months</li>
         </ul>
     </div>
     <div id="list4" class="dropdown-check-list" tabindex="100">
-        <span class="anchor">Select income range</span>
-        <ul id="items" class="items">
+        <div class="anchor">Select income range</div>
+        <ul class="items" class="items">
             <li><input type="checkbox" />less than 2000 </li>
             <li><input type="checkbox" />between 2000 and 3500</li>
             <li><input type="checkbox" />more than 3500</li>
