--- a/views/pro/dashboard.hbs
+++ b/views/pro/dashboard.hbs
@@ -4,6 +4,6 @@
 </div>
 <div class="contacts-bought">
     <h1>My contacts</h1>
-    {{> pro-filters}}
-    {{> pro-filtered-contacts}}
+    {{> pro_filters}}
+    {{> pro_filtered_contacts}}
 </div>
