--- a/views/partials/nav_bar_investor.hbs
+++ b/views/partials/nav_bar_investor.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <div>
-            <a href="/"><img src="" alt="logo"></a>
+            <a href="/"><img src="img/keeyz-logo.png" alt="keez-logo"></a>
         </div>
         <div>
             <a href="/blog">Blog</a>
