some CSS on layout + cart page

--- a/views/invest/index.hbs
+++ b/views/invest/index.hbs
@@ -2,7 +2,7 @@
 
 <div>
     <img src="" alt="background-image">
-    <div>
+    <div class="value-proposition">
         <div>
             <h2>Learn</h2>
             <a href="https://www.flaticon.com/authors/popcorns-arts" title="Icon Pond"></a>
