--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Keeyz</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="/css/layout.css">
     {{#each css}}
     <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
@@ -20,12 +23,12 @@
     {{{body}}}
 
     <footer>
-        <div>
+        <div class="main-footer">
             <p>Made with love in Paris ❤️</p>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""></a>
             </div>
         </div>
     </footer>
