--- a/views/partials/nav_bar_investor.hbs
+++ b/views/partials/nav_bar_investor.hbs
@@ -1,9 +1,9 @@
 <header>
-    <nav>
+    <nav class="main-nav">
         <div>
-            <a href="/"><img src="img/keeyz-logo.png" alt="keez-logo"></a>
+            <a href="/"><img class="logo-nav" src="img/keeyz-logo.png" alt="keez-logo"></a>
         </div>
-        <div>
+        <div class="link-nav">
             <a href="/blog">Blog</a>
             <a href="/about">About</a>
             <a href="/pro">Pro</a>
