--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(230, 223, 223);
+    background-color: #E6DFDF
 }
 
 .link-nav * {
