--- a/views/pro/index-pro.hbs
+++ b/views/pro/index-pro.hbs
@@ -3,5 +3,5 @@
 <div class="promise-pro">
     <h1>Win yourself some time</h1>
     <h4>Our high-profile young investors are waiting for you to get into action</h4>
-    <button>Get in touch with them</button>
+    <button><a href="/pro/signin">Get in touch with them</a></button>
 </div>
