--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -33,10 +33,11 @@
 }
 
 .main-footer {
-    background-color: rgb(202, 202, 202);
+    background-color: #4F5D75;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 14vh;
+    color: white;
 }
