--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -6,7 +6,7 @@
 <form id="fill-my-form" method="post" action="/my-form" class="form">
 
     <label for="marital_status">Marital status</label>
-    <datalist id="marital_status" required>
+    <select id="marital_status" required>
         <option value="" selected>
         <option disabled value="──────────">
         <option value="Domestic partnership">
@@ -14,7 +14,7 @@
         <option value="Married">
         <option value="Single">
         <option value="Widowed">
-    </datalist>
+    </select>
 
     <label for="nbr_child">How many children do you have?</label>
     <input class="input" id="nbr_child" name="nbr_child" type="number" required>
@@ -29,32 +29,32 @@
     <input class="input" id="annual_revenue_taxes" name="annual_revenue_taxes" type="number" required>
 
     <label for="objectives">What are your main objective(s)?</label>
-    <datalist id="objectives" required>
+    <select id="objectives" required>
         <option value="" selected>
         <option disabled value="──────────">
         <option value="Example1">
         <option value="Example2">
-    </datalist>
+    </select>
 
     <label for="construction_works">Are you willing to do some construction works?</label>
     <input type="construction_works" id="construction_works" name="construction_works" required>
 
     <label for="areas">Where do you want to invest?</label>
-    <datalist id="areas" required>
+    <select id="areas" required>
         <option value="" selected>
         <option disabled value="──────────">
         <option value="One hour from Paris">
         <option value="Two hours by train from Paris">
         <option value="Anywhere ! As long as money's raining"></option>
-    </datalist>
+    </select>
 
     <label for="timeline">When will you be ready to invest?</label>
-    <datalist id="timeline">
+    <select id="timeline">
         <option value="" selected>
         <option disabled value="──────────">
         <option value="Now!!!!">
         <option value="In the next few months">
-    </datalist>
+    </select>
 
     {{!-- Adding property here  --}}
     <button class="btn">Submit my form</button>
