--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    
 }
 
 .main-nav {
@@ -40,3 +41,18 @@
     justify-content: center;
     height: 14vh;
 }
+#page-container {
+    position: relative;
+    min-height: 85vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+  }
