--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,18 +20,21 @@
 </head>
 
 <body>
-    {{{body}}}
-
-    <footer>
-        <div class="main-footer">
-            <p>Made with love in Paris ❤️</p>
-            <div>
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fab fa-linkedin"></i></a>
-                <a href=""></a>
-            </div>
+    <div id="page-container">
+        <div id="content-wrap">
+            {{{body}}}
         </div>
-    </footer>
+        <footer id="footer">
+            <div class="main-footer">
+                <p>Made with love in Paris ❤️</p>
+                <div>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href=""></a>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
