--- a/views/auth/pro/signin.hbs
+++ b/views/auth/pro/signin.hbs
@@ -11,7 +11,7 @@
         <div class="form-item-wrapper">
             <label for="email" class="label-ref label">Email</label>
             <input id="email" type="email" class="input-text input" name="email" placeholder="albert.biceps@gmail.com"
-                required value="yo@gui.com">
+                required value="amine@yeay.fr">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="password" class="label-ref label">Password</label>
