--- a/views/partials/nav_bar_pro.hbs
+++ b/views/partials/nav_bar_pro.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav class="main-nav">
         <div>
-            <a href="/"><img class="logo-nav" src="./img/keeyz-logo.png" alt="keez-logo"></a>
+            <a href="/pro"><img class="logo-nav" src="./img/keeyz-logo.png" alt="keez-logo"></a>
         </div>
         <div class="link-nav">
             <a href="/">Investor</a>
