--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -21,7 +21,7 @@
         <div class="form-item-wrapper flexed-item">
             <label for="email" class="label-ref label">Email</label>
             <input id="email" type="email" name="email" class="input-text input" placeholder="sarah.hehe@gmail.com"
-                required value="amine@yeay.com">
+                required value="amine@yeay.fr">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="password" class="label-ref label">Password</label>
