--- a/views/partials/nav_bar_investor.hbs
+++ b/views/partials/nav_bar_investor.hbs
@@ -6,7 +6,6 @@
         <div class="link-nav">
             <a href="/blog">Blog</a>
             <a href="/about">About</a>
-            <a href="/pro">Pro</a>
             {{#unless isLoggedIn}}
             <a href="/signin">Signin</a>
             {{/unless}}
@@ -14,6 +13,7 @@
             <a href="/dashboard">Dashboard</a>
             <a href="/logout">Log out</a>
             {{/if}}
+            <a class="type-user" href="/pro">Pro</a>
         </div>
     </nav>
 </header>
