--- a/views/partials/nav_bar_pro.hbs
+++ b/views/partials/nav_bar_pro.hbs
@@ -14,6 +14,7 @@
             <a href="/pro/cart"><i class="fas fa-shopping-cart"></i></a>
             <a href="/logout">Log out</a>
             {{/if}}
+            <a class="type-user" href="/">Investor</a>
         </div>
     </nav>
 </header>
