form investor working!

--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -2,12 +2,11 @@
 {{> nav_bar_investor}}
 <h1 class="title">Hello {{user.firstname}}!</h1>
 
-
-<form id="fill-my-form" method="post" action="/my-form" class="form">
+<form id="fill-my-form" method="post" action="/form" class="form">
 
     <label for="marital_status">Marital status</label>
-    <select id="marital_status" required>
-        <option value="" selected></option>
+    <select id="marital_status" name="marital_status">
+        <option value="{{user.marital_status}}" selected>{{user.marital_status}}</option>
         <option disabled value="──────────">──────────</option>
         <option value="Domestic partnership">Domestic partnership</option>
         <option value="Divorced">Divorced</option>
@@ -17,31 +16,37 @@
     </select>
 
     <label for="nbr_child">How many children do you have?</label>
-    <input class="input" id="nbr_child" name="nbr_child" type="number" required>
+    <input value="{{user.nbr_child}}" class="input" id="nbr_child" name="nbr_child" type="number">
 
     <label for="total_revenue">What's your monthly revenue?</label>
-    <input class="input" id="total_revenue" name="total_revenue" type="number" required>
+    <input value="{{user.total_revenue}}" class="input" id="total_revenue" name="total_revenue" type="number">
 
     <label for="monthly_savings">What's your monthly saving capacity?</label>
-    <input class="input" id="monthly_savings" name="monthly_savings" type="number" required>
+    <input value="{{user.monthly_savings}}" class="input" id="monthly_savings" name="monthly_savings" type="number">
 
     <label for="annual_revenue_taxes">What's your annual revenue taxes?</label>
-    <input class="input" id="annual_revenue_taxes" name="annual_revenue_taxes" type="number" required>
+    <input value="{{user.annual_revenue_taxes}}" class="input" id="annual_revenue_taxes" name="annual_revenue_taxes"
+        type="number">
 
     <label for="objectives">What are your main objective(s)?</label>
-    <select id="objectives" required>
-        <option value="" selected></option>
+    <select id="objectives" name="objectives">
+        <option value="{{user.objectives}}" selected>{{user.objectives}}</option>
         <option disabled value="──────────">──────────</option>
         <option value="Example1">Example1</option>
         <option value="Example2">Example2</option>
     </select>
 
     <label for="construction_works">Are you willing to do some construction works?</label>
-    <input type="construction_works" id="construction_works" name="construction_works" required>
+    <select id="construction_works" name="construction_works">
+        <option value="{{user.construction_works}}" selected>{{user.construction_works}}</option>
+        <option disabled value="──────────">──────────</option>
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+    </select>
 
     <label for="areas">Where do you want to invest?</label>
-    <select id="areas" required>
-        <option value="" selected></option>
+    <select id="areas" name="areas">
+        <option value="{{user.areas}}" selected>{{user.areas}}</option>
         <option disabled value="──────────">──────────</option>
         <option value="One hour from Paris">One hour from Paris</option>
         <option value="Two hours by train from Paris">Two hours by train from Paris</option>
@@ -49,8 +54,8 @@
     </select>
 
     <label for="timeline">When will you be ready to invest?</label>
-    <select id="timeline">
-        <option value="" selected></option>
+    <select id="timeline" name="timeline">
+        <option value="{{user.timeline}}" selected>{{user.timeline}}</option>
         <option disabled value="──────────">──────────</option>
         <option value="Now!!!!">Now!!!!</option>
         <option value="In the next few months">In the next few months</option>
