--- a/views/pro/recherche.hbs
+++ b/views/pro/recherche.hbs
@@ -1,10 +1,12 @@
 {{> nav_bar_pro}}
 
-<h1>Find your future clients</h1>
-<div class="filter-zone">
-    {{> pro_filters}}
+<div class="pro-search-container">
+    <h1 class="headline">Find your future clients</h1>
+    <div class="filter-zone">
+        {{> pro_filters}}
 
-</div>
-<div class="results">
-    {{>pro_filtered_contacts}}
+    </div>
+    <div class="results">
+        {{>pro_filtered_contacts}}
+    </div>
 </div>
