--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -2,7 +2,12 @@
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
     
+}
+
+body{
+    font-size: 15px;
 }
 
 .main-nav {
