hbs_helper hide the cart for investor user

--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,1 +1,5 @@
 {{> nav_bar_investor}}
+<h2>Blog</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos tempore laboriosam repellat, sunt aperiam ipsa
+    dignissimos mollitia suscipit atque, laborum quo voluptatibus. Cupiditate, aperiam? Quisquam porro laboriosam
+    inventore exercitationem? Eaque?</p>
