--- a/views/partials/nav_bar_investor.hbs
+++ b/views/partials/nav_bar_investor.hbs
@@ -10,7 +10,9 @@
             <a href="/signin">Signin</a>
             {{/unless}}
             {{#if isLoggedIn}}
+            {{#if ifFormedFilled}}
             <a href="/dashboard">Dashboard</a>
+            {{/if}}
             <a href="/logout">Log out</a>
             {{/if}}
             <a class="type-user" href="/pro">Pro</a>
