--- a/views/invest/index.hbs
+++ b/views/invest/index.hbs
@@ -1,20 +1,19 @@
 {{> nav_bar_investor}}
 
 <div>
-    <img src="" alt="background-image">
+
     <div class="value-proposition">
         <div>
+            <img src="/img/walking.png" alt="img">
             <h2>Learn</h2>
-            <a href="https://www.flaticon.com/authors/popcorns-arts" title="Icon Pond"></a>
         </div>
         <div>
+            <img src="/img/key.png" alt="img">
             <h2>Make it happen</h2>
-            <a href="https://www.flaticon.com/authors/popcorns-arts" title="Icon Pond"></a>
         </div>
         <div>
+            <img src="/img/be-zen.png" alt="img">
             <h2>Be supported</h2>
-            <img src="" alt="">
-            <div><a href="https://www.flaticon.com/authors/popcorns-arts" title="Icon Pond"></a></div>
         </div>
     </div>
 </div>
