--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,23 +1,43 @@
-.value-proposition{
-display: flex;
-justify-content: space-evenly;
+#page-container,#content-wrap{
+    height:100%
+}
+.landing-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+    height: 71vh;
+}
+.landing-container>h1{
+    text-align: center;
+    font-size: 4rem;
+    color: white;
+}
+.value-proposition {
+    display: flex;
+    justify-content: space-evenly;
+   
 }
 
-.value-proposition>div{
+.value-proposition>div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
     
 }
 
-.value-proposition>div>img{
-    height: 300px;
-    width:auto;
+.value-proposition>div> h2{
+    color: white;
+    font-size: 1.9rem;
+}
+.value-proposition>div>img {
+    height: 260px;
+    width: auto;
 }
 
-body{
+body {
     background-color: #f48c6c;
 }
-
 
