--- a/views/pro/dashboard.hbs
+++ b/views/pro/dashboard.hbs
@@ -1,10 +1,15 @@
 {{> nav_bar_pro}}
 
-<div class="find-new-clients">
+<div class="find-new-clients pro-search-container">
     <a href="/pro/search"><button>Find new contacts</button></a>
 </div>
-<div class="contacts-bought">
+<div class="contacts-bought pro-search-container">
     <h1>My contacts</h1>
-    {{> pro_filters}}
-    {{> pro_filtered_contacts}}
+    <div class="filter-zone">
+        {{> pro_filters}}
+
+    </div>
+    <div class="results">
+        {{>pro_filtered_contacts}}
+    </div>
 </div>
