--- a/views/auth/investor/signin.hbs
+++ b/views/auth/investor/signin.hbs
@@ -5,7 +5,7 @@
         <h1 class="form-title">Welcome Back!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
-    <div><img id="img-sign" src="/img/sign.png" alt=""></div>
+    <div><img id="img-sign" src="/img/sign.png" alt="cloud-connection"></div>
     <section class="sign-block">
         {{#if msg}}
         <p class="message {{msg.status}}">{{msg.text}}</p>
