--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,7 +32,7 @@
                 <div>
                     <a href=""><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-linkedin"></i></a>
-                    <a href=""></a>
+                    {{!-- <a href=""></a> --}}
                 </div>
             </div>
         </footer>
